--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@ ul {
 }
 
 .principle-title {
+  color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -125,6 +126,7 @@ ul {
 }
 
 .team-section-title {
+  color: #2e2f42;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
@@ -134,6 +136,7 @@ ul {
 }
 
 .team-title {
+  color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -149,6 +152,7 @@ ul {
 /* Portfolio section */
 
 .portfolio-section-title {
+  color: #2e2f42;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
@@ -158,6 +162,7 @@ ul {
 }
 
 .portfolio-title {
+  color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
